--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: CV | A jekyll template
-description:  A beautiful template for your CV.
-url: https://jekyll-cv.stavrospanakakis.com
+title: Joe's lifting PBs
+description:  Tracking my weightlifting!
+url: https://jmdkc.github.io
 baseurl: ''
 theme_skin: blue
 
